--- a/bern_beta.ipynb
+++ b/bern_beta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,16 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
     "import os\n",
+    "from PIL import Image\n",
+    "import glob\n",
+    "import re\n",
     "\n",
-    "plt.rcParams['text.usetex'] = True\n",
-    "#plt.rcParams['']"
+    "plt.rcParams['text.usetex'] = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,16 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12a2e05e0>"
+       "<matplotlib.legend.Legend at 0x122fa0850>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12a443910>"
+       "<matplotlib.legend.Legend at 0x1230337c0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -210,7 +212,7 @@
     "ax.set_ylim(0, 11)\n",
     "ax.set_yticks([0, 2, 4, 6, 8, 10])\n",
     "\n",
-    "for n in range(0, 100):\n",
+    "for n in range(0, 101):\n",
     "    data = datas[:n]\n",
     "    a_hat, b_hat = inference_posterior_proba(data, a=3, b=3)\n",
     "    f = beta.pdf(x, a_hat, b_hat)\n",
@@ -218,14 +220,7 @@
     "    #ax.set_title(fr'$N={n}$')\n",
     "    im = ax.plot(x, f, color='b')\n",
     "    ims.append(im)\n",
-    "'''\n",
-    "def plot(i):\n",
-    "\n",
-    "    x = np.linspace(0, np.pi * 4, 100)\n",
-    "    y = np.sin(x + data)\n",
-    "    plt.plot(x, y, c='b')\n",
-    "    plt.title('data={}'.format(data))\n",
-    "'''\n",
+    "    \n",
     "ani = animation.ArtistAnimation(fig, ims, interval=100)\n",
     "ani.save(\"./posterior.gif\", writer=\"imagemagick\")"
    ]
@@ -234,7 +229,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ・予測分布推定\n",
+    "### ・matplotlib.animationで描画しようと思ったけど， 図タイトルの変化がうまく反映さないため，一旦画像を出力して， その後，gifにする．\n",
+    "Pillow 7.0.0 を使用．  \n",
+    "Pillow 7.1.1ではgifにできなかった．\n",
+    "\n",
+    "[参考]  \n",
+    "・Cannot write a GIF file: https://github.com/python-pillow/Pillow/issues/4543 [閲覧日:2020/4/16]  \n",
+    "・Python PillowでPNGからGIFを作る： https://qiita.com/hiro9/items/222bea3e77dfed235f0a [閲覧日：2020/4/16]  \n",
+    "・【Python】ファイル名の数字順にソート（自然順ソート）する方法： https://tane-no-blog.com/761/ [閲覧日:2020/4/16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs('./fig', exist_ok=True)\n",
+    "\n",
+    "np.random.seed(414)\n",
+    "\n",
+    "x = np.linspace(0, 1, 100)\n",
+    "datas = bernoulli.rvs(mu, size=100)\n",
+    "\n",
+    "for n in range(101):\n",
+    "    fig, ax = plt.subplots(figsize=(9, 6))\n",
+    "    ax.set_xticks([0, 0.2, 0.4, 0.6, 0.8, 1.0])\n",
+    "    ax.set_ylim(0, 11)\n",
+    "    ax.set_yticks([0, 2, 4, 6, 8, 10])\n",
+    "    \n",
+    "    data = datas[:n]\n",
+    "    a_hat, b_hat = inference_posterior_proba(data, a=3, b=3)\n",
+    "    f = beta.pdf(x, a_hat, b_hat)\n",
+    "    ax.set_title(fr'$N = {n}$')\n",
+    "    ax.plot(x, f)\n",
+    "    fig.savefig(f'./fig/{n}_fig.png', dpi=150)\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = sorted(glob.glob('./fig/*.png'), key=lambda path: int(re.sub('\\\\D', '', path)))\n",
+    "images = list(map(lambda file:Image.open(file), files))\n",
+    "images[0].save('posterior.gif', save_all=True, append_images=images[1:], duration=130, loop=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ・予測分布\n",
     "予測分布から100点サンプルする．"
    ]
   },
